# speedmeter

./: LICENSE  README.md  pyproject.toml
speedmeter/: __init__.py
speedmeter/api/: fast_api.py
speedmeter/format/: format.py
speedmeter/meters/: bandwidth_meter.py
